syntax = "proto3";
package key_value_store;

service KeyValueStore {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  optional string value = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message SetResponse {

}
